--- a/app/views/epicenter/feed.html.erb
+++ b/app/views/epicenter/feed.html.erb
@@ -1,11 +1,12 @@
-<h1>@<#= current_user.username#>'s Twitter Feed</h1>
-
+<% if current_user%>
+<h1>@<%= current_user.username%>'s Twitter Feed</h1>
+<%end%>
 <p>Here is what your friends are saying:</p>
 
 <div>
 	<% @following_tweets.each do |tweet|%>
 	<div>
-		<p>@<%= tweet.user.username%></p>
+		<p>@<%= link_to tweet.user.username, show_user_path(id: tweet.user.id)%></p>
 		<!-- html_safe allows people to use HTML tags within tweet, and lets us make links out of tags put in there. Also we can make links clickable. -->
 		<p><%= tweet.message.html_safe%></p>
 	</div>
