--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,92 @@
 
 @import 'bootstrap';
 @import 'font-awesome';
+
+body {
+	background: #e6ecf0;
+	color: #14171a;
+	font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.navbar {
+	background: #fff;
+	height: 46px;
+	line-height: 1.375;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    position: relative;
+    text-align: center;	
+}
+
+.global-nav .search-input {
+    background-color: #f5f8fa;
+    border-radius: 21px;
+    border: 1px solid #e6ecf0;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #14171a;
+    display: block;
+    font-size: 12px;
+    height: 32px;
+    line-height: 16px;
+    transition: all .2s ease-in-out;
+    width: 100%;
+    }
+
+.global-nav .form-search {
+    float: left;
+    height: 33px;
+    margin: 7px 15px 0 0;
+    font-size: 12px;
+    width: 221px;
+}
+
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.global-nav .form-search {
+    float: left;
+    height: 33px;
+    margin: 7px 15px 0 0;
+    font-size: 12px;
+    width: 221px;
+}
+
+.global-nav .container {
+    height: 100%;
+    max-width: 890px;
+    text-align: center;
+    width: auto;
+}
+.global-nav .search-icon .Icon {
+    background-color: transparent;
+    color: #66757f;
+    height: auto;
+    width: auto;
+}
+
+.Icon--medium {
+    font-size: 18px;
+    line-height: 18px;
+}
+
+.Icon {
+    background: transparent;
+    display: inline-block;
+    font-style: normal;
+    vertical-align: baseline;
+    position: relative;
+}
+
+button {
+    border: 0;
+    cursor: pointer;
+}
