--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -7,7 +7,7 @@
 <!-- adding a button -->
 <p>
 	<% if current_user.following.include?(@user.id)%>
-		<%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger"%>
+		<%= link_to "Following", unfollow_path(id: @user.id), class: "btn btn-primary", id: "unfollow-btn"%>
 	<%else%>
 		<%if current_user.id != @user.id%>
 			<%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
@@ -18,6 +18,8 @@
 <% @user.tweets.each do |tweet|%>
 	<div>
 		<p>@<%= @user.username %></p>
-		<p><%= tweet.message %></p>
+		&bull; <%= time_ago_in_words(tweet.created_at) if Time.now - tweet.created_at < 86400%>	
+		<%=tweet.created_at.strftime('%b %e') if Time.now - tweet.created_at > 86400%>	
+		 <p><%= tweet.message.html_safe %></p>
 	</div>
 <% end %>
