--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,23 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse global-nav" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <%= link_to "Tweet", new_tweet_path, class: "nav-link" %>
                 </li>
+                <li>
+                  <%= link_to "All Users", all_users_path%>
+                </li>
             </ul>
             <ul class="navbar-nav float-right">
+              <li><form class="t1-form form-search js-search-form search-input" action="/search" id="global-nav-search">
+    <label class="visuallyhidden" for="search-query">Search query</label>
+    <input class="search-input" type="text" id="search-query" placeholder="Search Twitter" name="q" autocomplete="off" spellcheck="false">
+    <span class="search-icon js-search-action">
+      <button type="submit" class="Icon Icon--medium Icon--search nav-search">
+        <span class="visuallyhidden">Search Twitter</span>
+      </button></span></form></li>
                 <% if user_signed_in? %>
                     <li class="nav-item dropdown"><span class="caret"></span>
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
